--- a/app/package.json
+++ b/app/package.json
@@ -17,7 +17,7 @@
     "webpack-dev-server": "^2.11.1"
   },
   "scripts": {
-    "dev": "webpack-dev-server",
+    "dev": " webpack-dev-server --host 0.0.0.0 --inline --content-base .",
     "build": "webpack"
   }
 }
